--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
+  "name": "my-app",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
+  },
   "dependencies": {
     "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/next-js": "^2.4.1",
     "@chakra-ui/react": "^2.10.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
@@ -13,6 +23,10 @@
     "heatmap.js": "^2.0.5",
     "leaflet": "^1.9.4",
     "leaflet-heatmap": "^1.0.0",
+    "my-app": "file:",
+    "next": "14.2.14",
+    "react": "^18",
+    "react-dom": "^18",
     "react-leaflet": "^4.2.1"
   }
 }
